--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <link href='//fonts.googleapis.com/css?family=Open Sans Condensed:300' rel='stylesheet'>
    
     <style>
-      body {background-color: rgb(66, 244, 194);}
+      body {background-color: rgb(255,255,255);}
       h1 {
-        color: rgb(255,255,255);
+        color: rgb(0,0,0);
         font-family:'Helvetica', 'Arial', 'Sans-Serif';
         font-size: 36px;
       }    
