--- a/contact.html
+++ b/contact.html
@@ -30,13 +30,13 @@
     	<ul>
         	<li><a href="/">home</a></li>
 	        <li><a href="/portfolio/portfolio">portfolio</a></li>
-          <li><a href="/graphics/graphics">graphics</a></li>
-           <li><a href="/gifs/gifs">gifs</a></li>
-          <li><a href="/contact/contact">contact</a></li>
+          	<li><a href="/graphics/graphics">graphics</a></li>
+           	<li><a href="/gifs/gifs">gifs</a></li>
+          	<li><a href="/contact/contact">contact</a></li>
     	</ul>
   </nav>
   <body>
-      <h1>Graphic Design Work</h1>
+      <h1>Contact Me</h1>
   </body>
   <footer>
 	<ul>
